description = "today-blog API"

apply plugin: "application"
apply plugin: 'infra.application'
apply plugin: 'cn.taketoday.blog.conventions'
apply plugin: 'cn.taketoday.blog.optional-dependencies'

//apply plugin: 'infra.application.aot'
//apply plugin: 'org.graalvm.buildtools.native'

dependencies {

  implementation 'cn.taketoday:ip2region-java:1.0-SNAPSHOT'
  implementation 'cn.taketoday:infra-starter-netty-server'
  implementation 'cn.taketoday:infra-starter-webmvc'
  implementation 'cn.taketoday:infra-starter-json'
  implementation 'cn.taketoday:infra-starter-restclient'
  implementation 'cn.taketoday:infra-starter-http-service'
  implementation 'cn.taketoday:infra-starter-validation'
  implementation 'cn.taketoday:infra-starter-jdbc'
  implementation 'cn.taketoday:infra-starter-mail'
  implementation 'cn.taketoday:infra-starter-freemarker'
  implementation 'eu.bitwalker:UserAgentUtils:1.21'
  implementation 'com.mysql:mysql-connector-j'
  implementation ('com.aliyun.oss:aliyun-sdk-oss:3.18.4' ){
    exclude group: "javax.xml.bind"
    exclude group: "jakarta.xml.bind"
    exclude group: "org.glassfish.jaxb"
  }


  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  implementation 'ch.qos.logback:logback-classic'
  implementation 'com.github.ben-manes.caffeine:caffeine'
  implementation("io.netty:netty-transport-native-kqueue") {
    artifact {
      classifier = 'osx-aarch_64'
    }
  }
//
//  implementation('io.netty:netty-transport-native-epoll') {
//    artifact {
//      classifier = 'linux-x86_64'
//    }
//  }

  annotationProcessor "cn.taketoday:infra-configuration-processor"
  annotationProcessor "cn.taketoday:infra-annotation-config-processor"

  testImplementation 'cn.taketoday:infra-starter-test'

  testImplementation 'org.projectlombok:lombok'
  testAnnotationProcessor("org.projectlombok:lombok")

}

compileJava {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21

}

application {
  applicationDefaultJvmArgs = [
      "-server",
      "--add-opens=java.base/java.nio=ALL-UNNAMED",
      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
//      "-Dinfra.profiles.active=prod",
      "--enable-native-access=ALL-UNNAMED",
      "-Dio.netty.leakDetection.level=disabled",
      "-Xms512M",
      "-Xmx512M"
  ]
}

infraJar {
  layered {
    includeLayerTools = false
  }
}

infraApplication {
  buildInfo {

  }
}


test {
  useJUnitPlatform()

}

distributions {
  main {
    contents {
      from("src/main/bin") {
        into 'bin'
        filePermissions {
          unix("rwxr-xr-x")
        }
      }
    }
  }
}